--- a/animationer.css
+++ b/animationer.css
@@ -7,10 +7,17 @@
   animation-iteration-count: infinite;
 }
 .bouncing {
-  animation: bouncing alternate;
+  animation-name: bouncing;
   animation-duration: 1s;
   animation-timing-function: ease-in;
+  animation-direction: alternate;
   animation-iteration-count: infinite;
+}
+.drop {
+  animation-name: drop;
+  animation-duration: 1s;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
 }
 
 @keyframes falling {
@@ -25,6 +32,15 @@
 @keyframes bouncing {
   0% {
     transform: translate(0, -140%);
+  }
+
+  100% {
+    transform: translate(0, 140%);
+  }
+}
+@keyframes drop {
+  0% {
+    transform: translate(0, -300%);
   }
 
   100% {
