--- a/animationer.css
+++ b/animationer.css
@@ -19,6 +19,11 @@
   animation-timing-function: ease-in;
   animation-fill-mode: forwards;
 }
+.pattern {
+  animation-name: pattern;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
 
 @keyframes falling {
   0% {
@@ -43,6 +48,23 @@
     transform: translate(0, -300%);
   }
 
+  100% {
+    transform: translate(0, 140%);
+  }
+}
+@keyframes pattern {
+  0% {
+    transform: translate(0, 140%);
+  }
+  25% {
+    transform: translate(-140%, 0);
+  }
+  50% {
+    transform: translate(0, -140%);
+  }
+  75% {
+    transform: translate(140%, 0);
+  }
   100% {
     transform: translate(0, 140%);
   }
