--- a/animationer.css
+++ b/animationer.css
@@ -50,6 +50,15 @@
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
+/* Kan ikke flytte transform origin,
+   så hele bolden kan ses */
+.rotation2 {
+  animation-name: rotation2;
+  transform-origin: 200%;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
 
 @keyframes falling {
   0% {
@@ -117,6 +126,11 @@
   }
 }
 @keyframes rotation {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotation2 {
   100% {
     transform: rotate(360deg);
   }
