--- a/animationer.css
+++ b/animationer.css
@@ -50,14 +50,21 @@
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
-/* Kan ikke flytte transform origin,
-   så hele bolden kan ses */
+
 .rotation2 {
+  /* Kan ikke flytte transform origin,
+     så hele bolden kan ses */
   animation-name: rotation2;
   transform-origin: 200%;
   animation-duration: 2s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
+}
+.glow {
+  animation-name: glow;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 @keyframes falling {
@@ -133,5 +140,13 @@
 @keyframes rotation2 {
   100% {
     transform: rotate(360deg);
+  }
+}
+@keyframes glow {
+  0% {
+    filter: drop-shadow(0px 0px 5px yellow);
+  }
+  100% {
+    filter: drop-shadow(0px 0px 25px yellow);
   }
 }
