--- a/animationer.css
+++ b/animationer.css
@@ -66,6 +66,13 @@
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
+.blur_to_gray {
+  animation-name: blur_to_gray;
+  animation-duration: 1s;
+  animation-timing-function: ease-in;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
 
 @keyframes falling {
   0% {
@@ -148,5 +155,14 @@
   }
   100% {
     filter: drop-shadow(0px 0px 25px yellow);
+  }
+}
+@keyframes blur_to_gray {
+  0% {
+    transform: translate(-150%, 0);
+  }
+  100% {
+    transform: translate(140%, 0) rotate(180deg);
+    filter: grayscale(100%) blur(5px);
   }
 }
