--- a/animationer.css
+++ b/animationer.css
@@ -73,6 +73,13 @@
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
+.pulse {
+  animation-name: pulse;
+  animation-duration: 1s;
+  animation-timing-function: ease-in;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
 
 @keyframes falling {
   0% {
@@ -164,5 +171,10 @@
   100% {
     transform: translate(140%, 0) rotate(180deg);
     filter: grayscale(100%) blur(5px);
+  }
+}
+@keyframes pulse {
+  100% {
+    transform: scale(1.1);
   }
 }
